# arbiter

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-data-collection/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-trade-history/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: 003_add_outcome_to_trades.py  004_whale_scoring_columns.py  1c5960c71bfe_whale_schema.py  704f539fec49_initial_schema.py
arbiter/: config.py  main.py
arbiter/clients/: polymarket.py
arbiter/db/: models.py  session.py
arbiter/discovery/: loop.py
arbiter/ingestion/: trades.py
arbiter/scoring/: whales.py
tests/: conftest.py
tests/integration/: test_ingestion_integration.py  test_scoring_integration.py
tests/unit/: test_cli_whales.py  test_client_get_trades.py  test_ingestion.py  test_scoring.py  test_trade_model.py
(+9 files in other folders)
