[tool.poetry]
name = "arbiter"
version = "0.1.0"
description = "Prediction market arbitrage detector"
packages = [{include = "arbiter"}]

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27"
pydantic = "^2.0"
pydantic-settings = "^2.0"
sqlalchemy = {version = ">=2.0", extras = ["asyncio"]}
asyncpg = "^0.31.0"
alembic = "^1.18.4"
tenacity = "^9.1.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"

[tool.poetry.scripts]
arbiter = "arbiter.main:main_sync"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry-core.masonry.api"
